# bot-assistance-by-gemini

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic_bot.ini  alembic_user.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  SYSTEM_REQUIREMENTS.md
docs/adr/: 0001-chatid-nonzero-validation.md
src/lifesync/: __init__.py  __main__.py
src/lifesync/chat_context/domain/: entities.py  repository.py
src/lifesync/chat_context/infrastructure/: sqlite_chat_binding_repository.py
src/lifesync/config/: settings.py
src/lifesync/habits/domain/: entities.py  repository.py  services.py  value_objects.py
src/lifesync/habits/infrastructure/: sqlite_habit_repository.py
src/lifesync/notifications/domain/: ports.py
src/lifesync/notifications/infrastructure/: telegram_notifier.py
src/lifesync/persistence/: db.py  uow.py
src/lifesync/persistence/models/: base.py  bot_models.py  user_models.py
src/lifesync/projects/domain/: entities.py  repository.py  value_objects.py
src/lifesync/projects/infrastructure/: sqlite_project_repository.py
src/lifesync/quotes/domain/: entities.py  repository.py
src/lifesync/quotes/infrastructure/: sqlite_quote_provider.py
src/lifesync/scheduling/infrastructure/: apscheduler_adapter.py
src/lifesync/shared_kernel/application/: unit_of_work.py
src/lifesync/shared_kernel/domain/: clock.py  events.py  exceptions.py  random_provider.py  value_objects.py
src/lifesync/tasks/domain/: entities.py  (+3 more)
src/lifesync/telegram/: bot.py
tests/: conftest.py  test_domain_habits.py  test_domain_tasks.py
(+39 files in other folders)
