[project]
name = "life-sync-assistant"
version = "0.1.0"
description = "Task & Project Management Telegram Bot"
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lifesync"]
dependencies = [
    "aiogram>=3.4.1",
    "sqlalchemy>=2.0.28",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.1",
    "pydantic-settings>=2.2.1",
    "apscheduler>=3.10.4",
    "structlog>=24.1.0",
    "greenlet>=3.5.2",
    "aiohttp-socks>=0.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "freezegun>=1.4.0",
    "ruff>=0.3.2",
    "mypy>=1.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
